2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/EmberOgre.*
		* added accessor for the main View and made some accessors const

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/EmberSceneManager/src/OgreTerrainRenderable.cpp
		* make it right this time

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/EmberSceneManager/src/OgreTerrainRenderable.cpp
		* don't forget to set the material lod index

2005-06-22  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Avatar.cpp
		* set the walk speed to 5 again
	* src/components/ogre/model/XMLModelDefinitionSerializer.cpp
		* upon error, log an error and continue
	* src/components/ogre/modeldefinitions/*
		* added a lot of new entities, amongst them the mausoleum, the skeleton (and lych), the broken tower, the house and the gallows	 

2005-06-22  Erik Hjortsberg  <erik@katastrof.nu>

	* /src/components/ogre/environment/Sky.cpp
		* get the setting for fog max distance from the config file

2005-06-22  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberSceneManager/src/OgreTerrainRenderable.cpp
		* if a piece of terrain is fully in the fog, apply the lowest LOD to it, since it's not actually seen anyway

2005-06-21  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: added setting for fog max distance

2005-06-21  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: added setting for fog max distance

2005-06-21  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/InventoryWidget.*, 
		* better use of the base class Widget
	* src/components/ogre/widgets/InspectWidget.*, 
		* added debug buttons for showing the bounding box of both the ogre entity and the eris entity
		* update values each frame (note: this will lead to a segfault if the inspected entity is deleted, needs to be fixed)

2005-06-21  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/EntityPickerWidget.*, src/components/ogre/widgets/JesusEdit.*